tests/fixtures/invalid/multi/import_private_item/src/lib/main.gcl
// Error: importing a private item from another file (V001).
import lib.lib.{ secret };
